--- a/SloRadio/Localization/sl.lproj/Localizable.strings
+++ b/SloRadio/Localization/sl.lproj/Localizable.strings
@@ -37,7 +37,7 @@
 "Settings" = "Nastavitve";
 "About" = "O aplikaciji";
 "Copyright" = "Pravice";
-"Contact" = "Kontant";
+"Contact" = "Kontakt";
 "Acknowledgements" = "Zahvale";
 
 // Numbers
