--- a/SloRadio/Localization/Base.lproj/Localizable.strings
+++ b/SloRadio/Localization/Base.lproj/Localizable.strings
@@ -42,7 +42,14 @@
 
 // Numbers
 "NumberOfMinutes" = "%d minutes";
+"NumberOfSeconds" = "%.1f seconds";
 "VersionFormat" = "Version %@ (%@)";
+
+// Player
+"Player" = "Predvajalnik";
+"ManualCaching" = "Manual predpomnjenje";
+"CacheSize" = "Velikost predpomnilnika";
+"CacheWarning" = "Large cache size values can significantly delay the start of playback.";
 
 // Error handling
 "Oops" = "Oops!";
