--- a/SloRadio/Localization/sl.lproj/Localizable.strings
+++ b/SloRadio/Localization/sl.lproj/Localizable.strings
@@ -47,7 +47,7 @@
 
 // Player
 "Player" = "Predvajalnik";
-"ManualCaching" = "Ročno predpomnjenje";
+"AdditionalCaching" = "Dodatno predpomnjenje";
 "CacheSize" = "Velikost predpomnilnika";
 "CacheWarning" = "Visoke vrednosti predpomnilnika lahko precej upočasnijo začetek predvajanja.";
 
