New CarPlay support (with scenes)

--- a/SloRadio/Localization/Base.lproj/Localizable.strings
+++ b/SloRadio/Localization/Base.lproj/Localizable.strings
@@ -38,6 +38,8 @@
 "About" = "About";
 "Copyright" = "Copyright";
 "Contact" = "Contact";
+"PleaseWait" = "Please wait";
+"Loading" = "Loading…";
 "Acknowledgements" = "Acknowledgements";
 
 // Numbers
