--- a/SloRadio/Localization/sl.lproj/Localizable.strings
+++ b/SloRadio/Localization/sl.lproj/Localizable.strings
@@ -38,6 +38,8 @@
 "About" = "O aplikaciji";
 "Copyright" = "Pravice";
 "Contact" = "Kontakt";
+"PleaseWait" = "Prosimo počakajte";
+"Loading" = "Nalaganje …";
 "Acknowledgements" = "Zahvale";
 
 // Numbers
